test/classes/vass/ref-like-intents/ref-superclass.good
ref-superclass.chpl:13: error: unresolved call 'procRefD(C)'
ref-superclass.chpl:6: note: candidates are: procRefD(ref arg: D)
